<resources>
    <string name="app_name">Shoe-Store-App</string>
    <string name="welcome_to_my_shoe_store">Welcome To My Shoe Store</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_yet_registered">Not yet registered ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_to_my_shoe_store">Log In To My Shoe Store</string>
    <string name="welcome_screen_text">I hope you like my humble store \n\nClick the button below to navigate to the instructions of my store</string>
    <string name="instructions">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_shoe_store_instructions">My Shoe Store Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="instruction_one">By tapping the - Shoe List - button bellow, you will navigate to my store\'s list of our finest shoes</string>
    <string name="instruction_two">In this shoe list screen you can browse, add and edit my store\'s list of shoes.</string>
    <string name="shoes_image">Shoes Image</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="shoes_size">Shoes Size</string>
    <string name="image_description">Image Description</string>
    <string name="choose_your_size">Choose your size</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="log_out">Log out</string>
    <string name="logout">Logout</string>
</resources>