<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:id="@+id/login_layout"
    tools:context=".screens.authentication.LoginFragment"
    android:name="com.example.shoe_store_app.screens.authentication.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/sbackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_my_shoe_store"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:background="@drawable/credentials">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/enter_your_credentials"
                android:textAlignment="center"
                android:textColor="@color/black"

                android:textSize="16sp"
                android:textStyle="bold|normal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_margin="5dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/forgot_your_password"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textStyle="normal"/>

        </LinearLayout>

        <Button
            android:id="@+id/sign_in"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:elevation="15dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/LoginButton"
            app:backgroundTint="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/not_yet_registered"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/signup"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/SignupButton"
                app:backgroundTint="@color/black"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</layout>

