<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    Here, I chose constraint layout because
    inside the parent view I wanted to place other detail
    views which has a relatively complex orientation
    and it is easier to build views of complex orientation
    with constraint view -->
    <data>

        <variable
            name="shoeListViewModel"
            type="com.example.shoe_store_app.screens.game.ShoeListViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="130dp">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/credentials"/>

    <ImageView
        android:id="@+id/shoeImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/shoes_image"
        android:src="@drawable/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brandName"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shoeImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/brand_name" />

    <TextView
        android:id="@+id/shoeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/brandName"
        app:layout_constraintTop_toBottomOf="@+id/brandName"
        tools:text="@string/shoes_name" />

    <TextView
        android:id="@+id/shoeSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/brandName"
        app:layout_constraintTop_toBottomOf="@+id/brandName"
        tools:text="@string/shoes_size" />



</androidx.constraintlayout.widget.ConstraintLayout>

    </layout>