<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/instructions_layout01"
        tools:context=".screens.home.InstructionsFragment"
        android:name="com.example.shoe_store_app.screens.home.InstructionsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/s1background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_shoe_store_instructions"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textStyle="bold|normal|italic"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/credentials"
            android:layout_margin="24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/instruction_one"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/credentials"
            android:layout_margin="24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/instruction_two"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:gravity="center"
                />

        </LinearLayout>

            <Button
                android:id="@+id/shoe_list_button"
                android:text="@string/shoe_list"
                android:textSize="15sp"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/SignupButton"
                app:backgroundTint="@color/black"/>

        </LinearLayout>

</layout>

