<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/welcome_layout"
        tools:context=".screens.home.WelcomeFragment"
        android:name="com.example.shoe_store_app.screens.home.WelcomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/s1background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_my_shoe_store"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textStyle="bold|normal|italic"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/credentials"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/welcome_screen_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginBottom="100dp"/>


            <Button
                android:id="@+id/instructions"
                android:text="@string/instructions"
                android:textSize="15sp"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/SignupButton"
                app:backgroundTint="@color/black"/>


        </LinearLayout>

    </LinearLayout>

</layout>

